# test-wasm-package

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs
use-test/: package-lock.json  package.json  webpack.config.js
use-test/src/: index.js
